infra/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "app.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
