infra/istio/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: istio-http
  namespace: ssi
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["agg.local"]
  rules:
    - matches:
      - path:
          type: Exact
          value: /
      backendRefs:
      - name: agg
        port: 3000
