infra/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: agg-auth
  namespace: ssi
spec:
  selector:
    matchLabels:
      app: agg
  rules:
    - from:
        - source:
            principals: ["*"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: agg-verbs
  namespace: ssi
spec:
  selector:
    matchLabels:
      app: verbs
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/ssi/sa/agg"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: agg-nouns
  namespace: ssi
spec:
  selector:
    matchLabels:
      app: nouns
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/ssi/sa/agg"]
